// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorizedUI Component Authenticated State should render children when not loading and no error 1`] = `
<div>
  <div>
    Protected Content
  </div>
</div>
`;

exports[`AuthorizedUI Component Error State should render ErrorView when error is present 1`] = `
<div>
  <div
    class="MuiBox-root css-s92abg"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-ptdwpq-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1ygil4i-MuiToolbar-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 css-o2za6n-MuiTypography-root"
        >
          My App
        </h2>
      </div>
    </header>
    <div
      class="MuiBox-root css-9eeetu"
    >
      <div
        class="MuiBox-root css-0"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 css-zi892p-MuiTypography-root"
        >
          Authentication failed
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorizedUI Component Loading State should render LoadingView when loading is true 1`] = `
<div>
  <div
    class="MuiBox-root css-s92abg"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-ptdwpq-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1ygil4i-MuiToolbar-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 css-o2za6n-MuiTypography-root"
        >
          My App
        </h2>
      </div>
    </header>
    <div
      class="MuiBox-root css-9eeetu"
    >
      <div
        class="MuiBox-root css-1l4w6pd"
        data-testid="loading-view"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
